# CybersecurityPaperCrawling

./: .gitignore  CLAUDE.md  README.md  check_status.sh  crawler_ieee_sp.py  crawler_ndss.py  crawler_usenix_security.py  pyproject.toml
cybersec_papers/: README.md  convert_pdf.py  pyproject.toml
cybersec_papers/src/cybersec_papers/: __init__.py  __main__.py  config.py  main.py
cybersec_papers/src/cybersec_papers/converter/: __init__.py  mineru.py
cybersec_papers/src/cybersec_papers/core/: __init__.py  base_crawler.py  downloader.py  metadata.py  session.py  utils.py
cybersec_papers/src/cybersec_papers/crawlers/: __init__.py  acm_ccs.py  ieee_sp.py  ndss.py  usenix.py
cybersec_papers/src/cybersec_papers/services/: __init__.py  arxiv.py  browser_cookies.py  browser_downloader.py  flaresolverr.py  semantic_scholar.py
