[project]
name = "cybersec-papers"
version = "1.0.0"
description = "Cybersecurity conference paper crawler and converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "playwright>=1.57.0",
    "mineru[core]>=2.6.8",
]

[project.optional-dependencies]
convert = [
    "mineru[core]>=2.0",
]
gpu = [
    "mineru[core,vllm]>=2.0",
    "torch>=2.0.0",
]

[project.scripts]
cybersec-papers = "cybersec_papers.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cybersec_papers"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
